--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,5 +1,5 @@
 footer{
-    position: absolute;
+    /* position: absolute; */
     justify-content: center;
     display: flex;
     background-color: white;
