--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -6,6 +6,9 @@ body{
     font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 .container{
+    min-height: 100vh;
     max-width: 1000px;
     margin: 30px auto;
+    /* display: flex; */
+    justify-content: center;
 }
